WIP: Trying to solve what causes Clang fuzz compilation fail
It fails relocation related issue, and the linker advises to use -fpie

--- a/src/secp256k1/configure.ac
+++ b/src/secp256k1/configure.ac
@@ -387,6 +387,10 @@ SECP_CFLAGS="$SECP_CFLAGS $WERROR_CFLAGS"
 ### Handle module options
 ###
 
+###
+### Handle module options
+###
+
 if test x"$enable_module_ecdh" = x"yes"; then
   SECP_CONFIG_DEFINES="$SECP_CONFIG_DEFINES -DENABLE_MODULE_ECDH=1"
 fi
@@ -413,6 +417,10 @@ fi
 if test x"$enable_external_default_callbacks" = x"yes"; then
   SECP_CONFIG_DEFINES="$SECP_CONFIG_DEFINES -DUSE_EXTERNAL_DEFAULT_CALLBACKS=1"
 fi
+
+###
+### Check for --enable-experimental if necessary
+###
 
 ###
 ### Check for --enable-experimental if necessary
