--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -259,6 +259,7 @@ BGL_CORE_H = \
   shutdown.h \
   signet.h \
   streams.h \
+  support/allocators/pool.h \
   support/allocators/secure.h \
   support/allocators/zeroafterfree.h \
   support/cleanse.h \
