refactor: Move fs.* to util/fs.*
The fs.* files are already part of the libbitcoin_util library. With the
introduction of the fs_helpers.* it makes sense to move fs.* into the
util/ directory as well.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -153,7 +153,6 @@ BGL_CORE_H = \
   deploymentstatus.h \
   external_signer.h \
   flatfile.h \
-  fs.h \
   headerssync.h \
   httprpc.h \
   httpserver.h \
@@ -284,6 +283,7 @@ BGL_CORE_H = \
   util/exception.h \
   util/fastrange.h \
   util/fees.h \
+  util/fs.h \
   util/fs_helpers.h \
   util/getuniquepath.h \
   util/golombrice.h \
@@ -696,7 +696,6 @@ libBGL_util_a_SOURCES = \
   support/lockedpool.cpp \
   chainparamsbase.cpp \
   clientversion.cpp \
-  fs.cpp \
   logging.cpp \
   random.cpp \
   randomenv.cpp \
@@ -709,6 +708,7 @@ libBGL_util_a_SOURCES = \
   util/error.cpp \
   util/exception.cpp \
   util/fees.cpp \
+  util/fs.cpp \
   util/fs_helpers.cpp \
   util/getuniquepath.cpp \
   util/hasher.cpp \
@@ -911,7 +911,6 @@ libBGLkernel_la_SOURCES = \
   deploymentinfo.cpp \
   deploymentstatus.cpp \
   flatfile.cpp \
-  fs.cpp \
   hash.cpp \
   kernel/chain.cpp \
   kernel/checks.cpp \
@@ -954,6 +953,7 @@ libBGLkernel_la_SOURCES = \
   uint256.cpp \
   util/check.cpp \
   util/exception.cpp \
+  util/fs.cpp \
   util/fs_helpers.cpp \
   util/getuniquepath.cpp \
   util/hasher.cpp \
