--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -238,10 +238,10 @@ task:
   << : *CAT_LOGS
 
 task:
-  name: '[TSan, depends, gui] [jammy]'
+  name: '[TSan, depends, gui] [lunar]'
   << : *GLOBAL_TASK_TEMPLATE
   container:
-    image: ubuntu:jammy
+    image: ubuntu:lunar
     cpu: 6  # Increase CPU and Memory to avoid timeout
     memory: 24G
   env:
