refactor: Split util::insert into its own file

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -296,6 +296,7 @@ BGL_CORE_H = \
   util/golombrice.h \
   util/hash_type.h \
   util/hasher.h \
+  util/insert.h \
   util/macros.h \
   util/message.h \
   util/moneystr.h \
