refactor: Split util::AnyPtr into its own file

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -278,6 +278,7 @@ BGL_CORE_H = \
   txorphanage.h \
   txrequest.h \
   undo.h \
+  util/any.h \
   util/asmap.h \
   util/batchpriority.h \
   util/bip32.h \
