--- a/test/config.ini.in
+++ b/test/config.ini.in
@@ -22,7 +22,7 @@ RPCAUTH=@abs_top_srcdir@/share/rpcauth/rpcauth.py
 @BUILD_BGL_UTIL_TRUE@ENABLE_BGL_UTIL=true
 @BUILD_BGL_WALLET_TRUE@ENABLE_WALLET_TOOL=true
 @BUILD_BGLD_TRUE@ENABLE_BGLD=true
-@ENABLE_FUZZ_TRUE@ENABLE_FUZZ=true
+@ENABLE_FUZZ_BINARY_TRUE@ENABLE_FUZZ_BINARY=true
 @ENABLE_ZMQ_TRUE@ENABLE_ZMQ=true
 @ENABLE_EXTERNAL_SIGNER_TRUE@ENABLE_EXTERNAL_SIGNER=true
 @ENABLE_USDT_TRACEPOINTS_TRUE@ENABLE_USDT_TRACEPOINTS=true
